--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.deezer.FavouriteActivity"></activity>
+        <activity android:name="com.example.geodata.GeoDataActivity"></activity>
+        <activity android:name="com.example.lyrics.LyricsActivity" />
+        <activity android:name="com.example.soccer.SoccerActivity" />
+        <activity android:name="com.example.deezer.FavouriteActivity" />
         <activity android:name="com.example.deezer.EmptyActivity" />
         <activity android:name="com.example.deezer.SongsResultsActivity" />
         <activity android:name="com.example.deezer.SearchResultsActivity" />
